--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "simp-ui",
-  "version": "1.0.1",
-  "description": "A simple React UI with minimal dependencies.",
-  "main": "index.js",
+  "name": "jjl",
+  "version": "0.0.0",
+  "description": "A simple React UI library with minimal dependencies.",
+  "main": "./dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -16,10 +17,19 @@
     "url": "https://github.com/jordanjlatimer/simp-ui/issues"
   },
   "homepage": "https://github.com/jordanjlatimer/simp-ui#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-icons": "^3.11.0"
+    "style-loader": "^2.0.0",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0"
   },
-  "type": "module"
+  "dependencies": {
+    "react-icons": "^3.11.0"
+  }
 }
