--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jjl",
-  "version": "0.0.0",
+  "version": "0.0.11",
   "description": "A simple React UI library with minimal dependencies.",
-  "main": "./dist/bundle.js",
+  "main": "./dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,18 +18,23 @@
   },
   "homepage": "https://github.com/jordanjlatimer/simp-ui#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.0",
-    "react": "^17.0.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react-icons": "^3.11.0"
   },
   "peerDependencies": {
