--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "jjl",
-  "version": "0.0.11",
+  "version": "0.0.15",
   "description": "A simple React UI library with minimal dependencies.",
   "main": "./dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --watch",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.0",
     "eslint": "^7.11.0",
@@ -30,14 +33,14 @@
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.6",
+    "typescript": "^4.0.3",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
+    "react": "^17.0.1",
     "react-icons": "^3.11.0"
-  },
-  "peerDependencies": {
-    "react": "^17.0.0"
   }
 }
