--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^7.11.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.1.2",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
