--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "module": "ES6",
     "moduleResolution": "node",
-    "lib": ["ES6", "DOM"],
+    "lib": ["ES6", "DOM", "es2017"],
     "strict": true,
     "jsx": "react",
     "target": "ES5",
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "outDir": "dist",
+    "declaration": true
   },
   "exclude": ["node_modules"],
   "include": ["src"]
