--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "simp-ui",
-  "version": "0.1.0",
+  "version": "0.1.12",
   "description": "A simple React UI library with minimal dependencies.",
-  "main": "./src/index.tsx",
+  "main": "./src/index.js",
+  "scripts": {
+    "build": "tsc && cp -r ./src/styles ./dist/styles"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jordanjlatimer/simp-ui.git"
@@ -25,5 +28,8 @@
   },
   "sideEffects": [
     "*.sass"
-  ]
+  ],
+  "dependencies": {
+    "@meronex/icons": "^4.0.0"
+  }
 }
