--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "simp-ui",
-  "version": "0.1.12",
+  "version": "0.1.124",
   "description": "A simple React UI library with minimal dependencies.",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc && cp -r ./src/styles ./dist/styles"
   },
