--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "simp-ui",
-  "version": "0.1.124",
+  "version": "0.2.0",
   "description": "A simple React UI library with minimal dependencies.",
-  "main": "./src/index.tsx",
+  "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc && cp -r ./src/styles ./dist/styles"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,19 +17,29 @@
   },
   "homepage": "https://github.com/jordanjlatimer/simp-ui#readme",
   "devDependencies": {
-    "eslint": "^7.11.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.1.2",
     "sass": "^1.28.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "react": "^17.0.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "webpack": "^5.20.0",
+    "webpack-cli": "^4.5.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3"
   },
   "sideEffects": [
     "*.sass"
   ],
-  "dependencies": {
-    "@meronex/icons": "^4.0.0"
-  }
+  "prettier": {
+    "printWidth": 120,
+    "quoteProps": "consistent",
+    "arrowParens": "avoid"
+  },
+  "dependencies": {}
 }
