--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "sass": "^1.28.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "webpack": "^5.20.0",
     "webpack-cli": "^4.5.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -32,6 +30,10 @@
     "webpack-bundle-analyzer": "^4.4.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3"
+  },
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "sideEffects": [
     "*.sass"
