--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "simp-ui",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A simple React UI library with minimal dependencies.",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "prettier --write . && tsc && cp -r ./src/styles ./dist/styles"
   },
   "repository": {
     "type": "git",
@@ -21,14 +21,6 @@
     "sass": "^1.28.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "webpack": "^5.20.0",
-    "webpack-cli": "^4.5.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "ts-loader": "^8.0.14",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
@@ -42,6 +34,5 @@
     "printWidth": 120,
     "quoteProps": "consistent",
     "arrowParens": "avoid"
-  },
-  "dependencies": {}
+  }
 }
