--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "simp-ui",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "A simple React UI library with minimal dependencies.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -r ./dist && prettier --write . && tsc && cp -r ./src/styles ./dist/styles"
+    "build": "rm -r ./dist && prettier --write . && tsc && cp -r ./src/styles ./dist/styles",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
