--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -r ./dist && prettier --write . && tsc && cp -r ./src/styles ./dist/styles",
+    "build": "rm -r ./dist && npm run format && tsc && npm run build-styles",
+    "build-styles": "cp -r ./src/styles ./dist/styles",
     "format": "prettier --write ."
   },
   "repository": {
